[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
dynamic = ["version"]
description = "A simple hello world Flask app"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
dependencies = [
    "Click==8.1.7",
    "Flask==3.0.3",
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.5",
    "Werkzeug==3.1.5",
    "markdown==3.7",
    "blinker==1.6.2",
    "pluggy==1.3",
]

[project.optional-dependencies]
test = [
    "pytest<=7.4.4",
    "requests",
    "urllib3==1.26.19",
    "exceptiongroup<=1.1.3",
    "typing-extensions<=4.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --junitxml test-report.xml"
